--- a/app/src/main/res/layout/activity_fruits_customer.xml
+++ b/app/src/main/res/layout/activity_fruits_customer.xml
@@ -22,6 +22,20 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
+        <TextView
+            android:id="@+id/CustomerFruitText1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="40dp"
+            android:layout_marginEnd="16dp"
+            android:background="@color/black"
+            android:gravity="center"
+            android:text=" Customer's Fruit categories"
+            android:textColor="@color/white"
+            android:textSize="20dp" />
+
         <ImageView
             android:id="@+id/CustomerAppleImage"
             android:layout_width="165dp"
