--- a/app/src/main/res/layout/activity_main_menu_retailer.xml
+++ b/app/src/main/res/layout/activity_main_menu_retailer.xml
@@ -30,9 +30,10 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="40dp"
             android:layout_marginEnd="16dp"
-            android:background="#FFC107"
+            android:background="@color/black"
             android:gravity="center"
-            android:text="      Select By Category"
+            android:text="Retailer's Categories"
+            android:textColor="@color/white"
             android:textSize="20dp" />
 
         <Button
